--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.datasource.password=user
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 logging.level.ru.uoles.proj=DEBUG
+logging.file.name=logs/generator.log
